# owrt-ubi-installer

./: Containerfile  README.md  build_installer.sh  unfit  unfit.c
.github/: FUNDING.yml
.github/workflows/: blank.yml
files/installer/: install.sh
files/lib/preinit/: 00_installer
src/: CMakeLists.txt  unfit.c
